[project]
name = "telegram-accounts-marketplace"
version = "1.0.0"
description = "Production-ready Telegram accounts marketplace bot"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.poetry]
name = "telegram-accounts-marketplace"
version = "1.0.0"
description = "Production-ready Telegram accounts marketplace bot"
authors = ["Dev Team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.3.0"
aiohttp = "^3.9.0"
sqlalchemy = {version = "^2.0.0", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.12.0"
redis = "^5.0.0"
aioredis = "^2.0.1"
telethon = "^1.30.0"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
loguru = "^0.7.2"
apscheduler = "^3.10.0"
cryptography = "^41.0.0"
requests = "^2.31.0"
aiofiles = "^23.2.0"
python-multipart = "^0.0.6"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
